# fictitious-play

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: fictitious-play.tex
examples/: demo.py
src/: __init__.py  cli.py
src/core/: __init__.py  convergence.py  fictitious_play.py  game_classifier.py  smooth_fp.py
src/viz/: __init__.py  app.py  simplex.py
tests/: test_classifier.py  test_convergence.py  test_fictitious_play.py  test_smooth_fp.py
